# claymore-engine

./: .gitignore  .gitmodules  ASSET_REFERENCE_SYSTEM.md  CMakeLists.txt  CMakeSettings.json  MULTI_LIGHT_SYSTEM.md  README.md  SERIALIZATION_FEATURES.md  StoneTub.fbx  claymore.clayproj
ClayProject/: AnimTrigger.cs  Material.mat  MyTestScript.cs  NewMaterial.mat  NewPrefab.prefab  TestScriptManaged.cs  prefabs.prefab
ClayProject/assets/: Idle.avatar  Idle.fbx  Idle_mixamo.com.anim  Tree01.avatar  X Bot.avatar  X Bot_mixamo.com.anim  building_01.avatar  building_01.fbx  char_01.avatar  char_01.fbx  level_01.fbx
ClayProject/assets/animations/: BasicController.animctrl  BlendController.animctrl  BoxOpen.avatar  BoxOpen.fbx  BoxOpen_ArmatureAction.anim  Idle.avatar  Idle.fbx  Punching (3).avatar  Punching (3).fbx  Punching (3)_mixamo.com.anim  Walking.avatar  Walking.fbx  Walking_AnimTrigger.anim  Walking_mixamo.com.anim
ClayProject/assets/models/: CubseSphere.avatar  CubseSphere.fbx  Fast Run (1).avatar  Fast Run (1).fbx  Fast Run (1)_mixamo.com.anim  Tree01.fbx  X Bot.fbx  char_01.avatar  char_01.fbx  char_01_T-Pose.anim  level_01.avatar  level_01.fbx
ClayProject/assets/prefabs/: DialogueBox.prefab.json  Player.prefab  Player.prefab.json  Player_1.prefab  UI.prefab.json  UI_1.prefab.json
ClayProject/overlay/: Room01.scene  rooms_01.avatar  rooms_01.fbx
ClayProject/scenes/: Default.scene  DefaultScene.scene  NavigationTest.scene  PhysicsTest.scene  Scene01.scene
ClayProject/scripts/: AnimTrigger.cs  BlendMorph.cs  ButtonTest.cs  DebugCube.cs  Globals.cs  MyTestScript.cs  TestScript.cs  navigationtest.cs
assets/prefabs/: EnemyPrefab.prefab
assets/scenes/: SampleScene.scene
docs/editor/: AnimationInspector.md
enc_temp_folder/8bbc429fd2b958cf37e34d7a8636594/: Renderer.cpp
scripts/ClaymoreEngine/: ClaymoreEngine.csproj  ComponentInterop.cs  EngineEntry.cs  EngineSyncContext.cs  Entity.cs  EntityExtensions.cs  EntityInterop.cs  InputInterop.cs  InteropExports.cs  InteropProcessor.cs  NavigationInterop.cs  ScriptComponent.cs  ScriptDomain.cs  ScriptHost.cs  ScriptRegistry.cs  SerializeField.cs  Transform.cs
scripts/ClaymoreEngine/components/: Animator.cs  BlendShapeComponent.cs  Button.cs  ComponentBase.cs  NavAgentComponent.cs  RigidBodyComponent.cs  (+1 more)
scripts/ScriptCompiler/: Program.cs  ScriptCompiler.csproj
shaders/: fs_outline_edge.sc  fs_particle.sc  fs_pbr.sc  fs_pbr_skinned.sc  fs_psx.sc  fs_sky.sc  fs_terrain.sc  fs_text.sc  fs_tint.sc  varying.def.sc  vs_debug.sc  vs_outline.sc  vs_particle.sc  vs_pbr.sc  vs_pbr_skinned.sc  vs_psx.sc  vs_psx_skinned.sc  vs_sky.sc  vs_terrain_height_texture.sc
src/: main.cpp
src/animation/: AnimationAsset.cpp  AnimationAsset.h  AnimationEvaluator.cpp  AnimationEvaluator.h  AnimationImporter.cpp  AnimationImporter.h  AnimationPlayerComponent.h  AnimationPreviewPlayer.cpp  AnimationSerializer.cpp  AnimationSerializer.h  AnimationSystem.cpp  AnimationSystem.h  AnimationTypes.h  AnimatorController.h  AnimatorRuntime.cpp  AnimatorRuntime.h  AvatarDefinition.cpp  AvatarDefinition.h  AvatarSerializer.cpp  AvatarSerializer.h  BindingCache.cpp  BindingCache.h  Curves.cpp  HumanoidAvatar.h  HumanoidBone.h  HumanoidRetargeter.cpp  HumanoidRetargeter.h  PreviewContext.cpp  PreviewContext.h  PreviewRenderer.cpp  PropertyTrack.h  Retargeting.cpp  Retargeting.h  SkeletonBinding.cpp  SkeletonBinding.h
src/core/: application.cpp  application.h
src/ecs/: AnimationComponents.h  ComponentUtils.cpp  ComponentUtils.h  Components.h  Entity.cpp  Entity.h  EntityData.cpp  EntityData.h  ParticleEmitterSystem.cpp  ParticleEmitterSystem.h  Scene.cpp  Scene.h  SkinningSystem.cpp  SkinningSystem.h  UIComponents.h
src/editor/: Input.cpp  Input.h  Project.cpp  Project.h  ProjectGenerator.h
src/interop/: DotnetBridge.cpp
src/io/: FileSystem.cpp  FileSystem.h
src/jobs/: JobSystem.h  Jobs.h  ParallelFor.h
src/navigation/: NavAgent.cpp  NavAgent.h  NavDebugDraw.cpp  NavDebugDraw.h  NavInterop.cpp  NavInterop.h  NavJobs.cpp  NavMesh.cpp  NavMesh.h  NavMeshBake.cpp  NavMeshBake.h  NavQueries.cpp  NavQueries.h  NavSerialization.cpp  NavSerialization.h  NavTypes.h  Navigation.cpp  Navigation.h
src/particles/: ParticleSystem.cpp  ParticleSystem.h  SpriteLoader.cpp  SpriteLoader.h
src/physics/: Physics.cpp  Physics.h
src/pipeline/: AssetLibrary.cpp  AssetLibrary.h  AssetMetadata.h  AssetMetadataIO.h  AssetPipeline.cpp  AssetPipeline.h  AssetReference.h  AssetRegistry.cpp  AssetRegistry.h  AssetWatcher.cpp  AssetWatcher.h  BuildExporter.cpp  BuildExporter.h  ModelImportCache.cpp  ModelImportCache.h  PakArchive.cpp  PakArchive.h
src/platform/: KeyCodes.h
src/prefab/: PathResolver.cpp  PathResolver.h  PrefabAPI.cpp  PrefabAPI.h  PrefabAsset.h  PrefabCache.cpp  PrefabCache.h  PrefabOverrides.h  PrefabSerializer.cpp  PrefabSerializer.h
src/rendering/: Camera.cpp  Camera.h  Environment.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  MaterialManager.cpp  MaterialManager.h  MaterialPropertyBlock.h  Mesh.h  ModelBuild.cpp  ModelBuild.h  ModelLoader.cpp  ModelLoader.h  PBRMaterial.cpp  PBRMaterial.h  Picking.cpp  Picking.h  Renderer.cpp  Renderer.h  RendererFactory.h  RendererOffscreen.cpp  ShaderBundle.cpp  ShaderManager.cpp  ShaderManager.h  SkinnedPBRMaterial.cpp  SkinnedPBRMaterial.h  StandardMeshManager.cpp  StandardMeshManager.h  Terrain.cpp  Terrain.h  TextRenderer.cpp  TextRenderer.h  TextureLoader.cpp  TextureLoader.h  VertexTypes.cpp  VertexTypes.h
src/scripting/: ComponentInterop.cpp  ComponentInterop.h  DotNetHost.cpp  DotNetHost.h  EntityInterop.cpp  EntityInterop.h  InputInterop.cpp  InputInterop.h  ManagedInterop.cpp  ManagedScriptComponent.h  ScriptComponent.h  ScriptReflection.cpp  ScriptReflection.h  ScriptReflectionInterop.cpp  ScriptReflectionInterop.h  ScriptReflectionSetup.h  ScriptSystem.h
src/serialization/: Serializer.cpp  Serializer.h
src/tools/: runtime_manifest.json
src/ui/: FileDialogs.cpp  UILayer.cpp  UILayer.h
src/utils/: Profiler.cpp  Profiler.h  TerrainPainter.cpp  TerrainPainter.h
(+68 files in other folders)
